--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,14 +1,8 @@
-/* debug */
-[class*="col-"] {
-    background-color: #006cfa;
+.border-padd {
     border: 1px solid white;
     padding: 15px;
     text-align: center;
-}
-
-[class*="offset"] {
-    border: none;
-    padding: 0;
+    background-color: #006cfa;
 }
 
 .container {
